# dash_python

./: .gitignore  README.md  pyproject.toml  teste.py
dash_python/: app.py
dash_python/bd/: querys.py  querys.xlsx
