[tool.poetry]
name = "dash-python"
version = "0.1.0"
description = ""
authors = ["Augusto Crosara <augustocrosara@hotmail.com>"]
readme = "README.md"
packages = [{include = "dash_python"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
streamlit = "^1.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pytest = "^7.4.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"
pyinstaller = "^5.13.0"
ruff = "^0.0.286"

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
run = "poetry run python app.py"
build = "python -m PyInstaller .\\"

[tool.isort]
profile = 'black'
line_length = 72